--- a/flipkartproject/app/templates/index.html
+++ b/flipkartproject/app/templates/index.html
@@ -1,5 +1,97 @@
 {% extends 'base.html' %} {% load static %}
 <title>{% block title %}FlipKart|Index{% endblock %}</title>
 <body>
-  {% block body %} {% endblock %}
+  {% block body %} 
+  <div class="container-fluid">
+    <div class="row"> 
+      <!-- category search starts here -->
+    <div class="col-2">
+
+      <div>
+      <h5>Search by Category</h5>
+      <hr>
+      <a href="#">By Mobile</a><br>
+      <a href="#">By Electronics</a><br>
+      <a href="#">By Shoes</a><br>
+      <a href="#">By Cloths</a><br>
+      </div>
+
+    <div class="mt-3">
+      <h5>Search By Price Range</h5>
+      <hr>
+      <form method="post" action="#">
+        <input type="number" placeholder="Min Price" name="min"><br><br>
+        <input type="number" placeholder="Max Price" name="max"><br><br>
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+
+    <div class="mt-3">
+      <h5>Sort By Price</h5>
+      <hr>
+      <a href="#">Low to High</a><br>
+      <a href="#">High to Low</a>
+    </div>
+
+    </div>
+    <!-- category search starts here -->
+    
+
+    <div class="col-10">
+      <!-- carousel start here -->
+      <div class="container-fluid">
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="1000">
+              <img src="{% static 'images/banner1.png' %}" class="d-block w-100" alt="... " width="200px" height="200px">
+            </div>
+            <div class="carousel-item" data-bs-interval="1000">
+              <img src="{% static 'images/banner2.png' %}" class="d-block w-100" alt="..." width="200px" height="200px">
+            </div>
+            <div class="carousel-item" data-bs-interval="1000">
+              <img src="{% static 'images/banner3.png' %}" class="d-block w-100" alt="..." width="200px" height="200px">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+      <!-- carousel ends  here -->
+
+      <!-- cards start here -->
+      <div class="container-fluid mt-3">
+        <div class="row">
+
+          {% for x in allproducts %}          
+          <div class="col-md-4 mt-3">
+            <div class="card" style="width: 18rem; ">
+              <img src="{{x.images.url}}" class="card-img-top" alt="{{x.productname}}" style="width: 286px; height: 250px;">
+              <div class="card-body">
+                <h5 class="card-title">{{x.productname}}</h5>
+                <p class="card-text">{{x.description}}</p>
+                <p class="card-text">Price:{{x.price}}/-</p>
+                <a href="#" class="btn btn-primary">Add to Cart</a>
+                <a href="#" class="btn btn-danger">Buy Now</a>
+              </div>
+            </div>
+          </div>
+          {% endfor %}
+
+        </div>
+      </div>
+
+      <!-- cards ends here -->
+    </div>
+    </div>  
+
+  </div>
+  
+  
+  {% endblock %}
 </body>
