--- a/flipkartproject/app/templates/index.html
+++ b/flipkartproject/app/templates/index.html
@@ -4,33 +4,88 @@
   {% block body %} 
   <div class="container-fluid">
     <div class="row"> 
+
+      <div class="container">
+        <div class="row">
+
+        <div class="col">
+          <a href="/electronicslist">
+          <img src="{% static 'images/appliances.png' %}" alt="" width="80px" height="70px">
+          <p>Appliances</p>
+          </a>
+        </div>
+        
+        <div class="col">
+          <a href="#">
+            <img src="{% static 'images/babyproducts.png' %}" alt="" width="80px" height="70px">
+           <p>Baby Products</p>
+            </a>
+          </div>
+
+        <div class="col">
+            <a href="#">
+              <img src="{% static 'images/beauty.png' %}" alt="" width="80px" height="70px">
+            <p>  Beauty Products</p>
+              </a>
+          </div>
+
+          <div class="col">
+              <a href="#">
+                <img src="{% static 'images/fashion.png' %}" alt="" width="80px" height="70px">
+                <p>Fashion</p>
+                </a>
+            </div>
+
+            <div class="col">
+                <a href="#">
+                  <img src="{% static 'images/furniture.png' %}" alt="" width="80px" height="70px">
+                 <p> Furniture</p>
+                  </a>
+              </div>
+              <div class="col">
+                <a href="#">
+                  <img src="{% static 'images/grocery.png' %}" alt="" width="80px" height="70px">
+                 <p> Grocery</p>
+                  </a>
+              </div>
+
+              <div class="col">
+                <a href="#">
+                  <img src="{% static 'images/kitchen.png' %}" alt="" width="80px" height="70px">
+                  <p>Kitchen</p>
+                  </a>
+              </div>
+        </div>
+      </div>
+      
       <!-- category search starts here -->
     <div class="col-2">
 
       <div>
       <h5>Search by Category</h5>
       <hr>
-      <a href="#">By Mobile</a><br>
-      <a href="#">By Electronics</a><br>
-      <a href="#">By Shoes</a><br>
-      <a href="#">By Cloths</a><br>
+      <a href="/mobilelist">By Mobile</a><br>
+      <a href="/electronicslist">By Electronics</a><br>
+      <a href="/shoeslist">By Shoes</a><br>
+      <a href="/clothlist">By Cloths</a><br>
       </div>
 
     <div class="mt-3">
       <h5>Search By Price Range</h5>
       <hr>
-      <form method="post" action="#">
+      <form method="post" action="/showpricerange/">
+        {% csrf_token %}
         <input type="number" placeholder="Min Price" name="min"><br><br>
         <input type="number" placeholder="Max Price" name="max"><br><br>
-        <input type="submit" value="Submit">
+        <input type="submit" class="btn btn-danger" value="Submit">
       </form>
     </div>
 
     <div class="mt-3">
       <h5>Sort By Price</h5>
       <hr>
-      <a href="#">Low to High</a><br>
-      <a href="#">High to Low</a>
+      <a href="/sortingbyprice/?sort=low_to_high">Low to High</a><br>
+      <a href="/sortingbyprice/?sort=high_to_low">High to Low</a>
     </div>
 
     </div>
@@ -68,6 +123,10 @@
       <div class="container-fluid mt-3">
         <div class="row">
 
+          {% for m in messages %}
+          <h1><mark>{{m}}</mark></h1>
+          {% endfor %}
+          
           {% for x in allproducts %}          
           <div class="col-md-4 mt-3">
             <div class="card" style="width: 18rem; ">
