--- a/flipkartproject/app/templates/index.html
+++ b/flipkartproject/app/templates/index.html
@@ -135,7 +135,7 @@
                 <h5 class="card-title">{{x.productname}}</h5>
                 <p class="card-text">{{x.description}}</p>
                 <p class="card-text">Price:{{x.price}}/-</p>
-                <a href="#" class="btn btn-primary">Add to Cart</a>
+                <a href="/addtocart/{{x.productid}}" class="btn btn-primary">Add to Cart</a>
                 <a href="#" class="btn btn-danger">Buy Now</a>
               </div>
             </div>
