--- a/flipkartproject/app/templates/addaddress.html
+++ b/flipkartproject/app/templates/addaddress.html
@@ -27,6 +27,7 @@
                     </div>
 
                     <input type="submit" class="btn btn-primary" value="Save Address">
+                  <a href="/showcarts"> <input type="button" class="btn btn-danger" value="Cancel"></a>
                 </form>
             </div>
         </div>
