--- a/flipkartproject/app/templates/showaddress.html
+++ b/flipkartproject/app/templates/showaddress.html
@@ -28,6 +28,9 @@
             </div>
 
         </form>
+
+        <a href="/payment"><input type="submit" class="btn btn-primary" value="Proceed to Payment"></a>
+        <a href="/addaddress"><input type="button" class="btn btn-danger" value="Cancel"></a>
     </div>
 </div>
 
