--- a/flipkartproject/app/templates/showcarts.html
+++ b/flipkartproject/app/templates/showcarts.html
@@ -58,10 +58,15 @@
         <div class="col-md-3">
             <div class="row">
                 <h3 class="btn-danger">Total Amount Section</h3>
-                <h5><strong>Total items:</strong></h5>
+                <h5><strong>Total items:{{totalitems}}</strong></h5>
                 <hr>
-                <h5><strong>Total Amount: Rs</strong></h5>
-                <a href="/addaddress" class="btn btn-danger">Make Payment</a>
+                <h5><strong>Total Amount: Rs {{totalamount}}/-</strong></h5>
+                
+                {% if totalitems >= 1 %}
+                <a href="/addaddress"><button class="btn btn-danger" >Make Payment</button></a>
+                {% else %}
+                <a href="#"><button class="btn btn-danger" disabled>Make Payment</button></a>
+                {% endif %}
             </div>
 
         </div>
