--- a/flipkartproject/app/templates/payment.html
+++ b/flipkartproject/app/templates/payment.html
@@ -4,16 +4,20 @@
 
 <div class="container">
     <div class="row">
-        <h3>Total Amount:</h3>
+        <h3>Total Amount:{{amount}}</h3>
+        {% if error %}
+        <mark><h1>{{error}}</h1></mark>
+        {% endif %}
+
 
         <button id="rzp-button1">Pay with Razorpay</button>
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 <script>
 var options = {
     "key": "rzp_test_wH0ggQnd7iT3nB", // Enter the Key ID generated from the Dashboard
-    "amount": "50000", // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
+    "amount": "{{data.amount}}", // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
     "currency": "INR",
-    "name": "Acme Corp",
+    "name": "FlipKartClone",
     "description": "Test Transaction",
     "image": "https://example.com/your_logo",
     // "order_id": "order_IluGWxBm9U8zJ8", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
