--- a/flipkartproject/app/templates/app/product_list.html
+++ b/flipkartproject/app/templates/app/product_list.html
@@ -30,9 +30,11 @@
                 <td>
                     <img src="/media/{{x.images}}" alt="{{x.productname}}" width="100px" height="200px">
                 </td>
-                <td><a href="#">Update</a></td>
-                <td><a href="#">Remove</a></td>
+                <td><a href="/ProductUpdate/{{x.pk}}">Update</a></td>
+                <td><a href="/ProductDelete/{{x.pk}}">Remove</a></td>
                 </tr>
+                {% empty %}
+                <mark><h1>No product added by you.</h1></mark>
                 {% endfor %}
             </tbody>
         </table>
