--- a/flipkartproject/app/templates/app/product_update_form.html
+++ b/flipkartproject/app/templates/app/product_update_form.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}FlipKart|Register Product{% endblock %}
+{% block title %}FlipKart|Update Product{% endblock %}
 {% block body %}
 
 <div class="container">
@@ -10,7 +10,7 @@
                 {{form.as_table}}
             </table>
             <br>
-            <input type="submit" value="Register">
+            <input type="submit" value="Update">
             
         </form>
         <a href="/ProductList"><button>Cancel</button></a>
