--- a/flipkartproject/app/templates/addaddress.html
+++ b/flipkartproject/app/templates/addaddress.html
@@ -11,24 +11,26 @@
             <div class="card-body p-4">
                 <form method="post">
                     {% csrf_token %}
+
+                    
                     <div class="form-group">
-                        <label>Mobile Number</label>
+                        <label for="mobile">Mobile Number</label>
                         {{form.mobile}}
                     </div>
 
                     <div class="form-group">
-                        <label>Address</label>
+                        <label for="address">Address</label>
                         {{form.address}}
                     </div>
 
                     <div class="form-group">
-                        <label>Pincode</label>
+                        <label for="pincode">Pincode</label>
                         {{form.pincode}}
                     </div>
-
+                    
                     <input type="submit" class="btn btn-primary" value="Save Address">
-                  <a href="/showcarts"> <input type="button" class="btn btn-danger" value="Cancel"></a>
                 </form>
+                <a href="/showcarts"> <input type="button" class="btn btn-danger" value="Cancel"></a>
             </div>
         </div>
 
