--- a/flipkartproject/app/templates/showaddress.html
+++ b/flipkartproject/app/templates/showaddress.html
@@ -30,7 +30,7 @@
         </form>
 
         <a href="/payment"><input type="submit" class="btn btn-primary" value="Proceed to Payment"></a>
-        <a href="/addaddress"><input type="button" class="btn btn-danger" value="Cancel"></a>
+        <a href="/addaddress_all"><input type="button" class="btn btn-danger" value="Cancel"></a>
     </div>
 </div>
 
